--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,15 @@
 {
     "python.languageServer": "Pylance",
     "python.analysis.diagnosticSeverityOverrides": {
-        "reportMissingModuleSource": "none"
+        "reportMissingModuleSource": "none",
+        "reportShadowedImports": "none"
     },
-    "python.analysis.extraPaths": [
-        "c:\\Users\\Tiago\\.vscode\\extensions\\joedevivo.vscode-circuitpython-0.1.20-win32-x64\\boards\\0x239A\\0x80F4",
-        "c:\\Users\\Tiago\\.vscode\\extensions\\joedevivo.vscode-circuitpython-0.1.20-win32-x64\\stubs",
-        "c:\\Users\\Tiago\\AppData\\Roaming\\Code\\User\\globalStorage\\joedevivo.vscode-circuitpython\\bundle\\20240827\\adafruit-circuitpython-bundle-py-20240827\\lib"
-    ],
-    "circuitpython.board.version": null,
-    "circuitpython.board.vid": "0x239A",
-    "circuitpython.board.pid": "0x80F4"
+    "cSpell.words": [
+        "adafruit",
+        "digitalio",
+        "Gamepad",
+        "Halbert",
+        "Hbbbb",
+        "pwmio"
+    ]
 }
