change the report descriptor

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,11 @@
     },
     "cSpell.words": [
         "Adafruit",
+        "analogio",
         "gamepad",
-        "Halbert"
+        "GPIO",
+        "Halbert",
+        "mediacontrol",
+        "OLED"
     ]
 }
