--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,9 @@
     },
     "cSpell.words": [
         "Adafruit",
+        "Amstudio's",
         "analogio",
+        "Cader",
         "gamepad",
         "GPIO",
         "Halbert",
