--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 boot_out.txt
 $RECYCLE.BIN
 .vscode/
+sd/
+System Volume Information/
 *.code-workspace
 
 import microcontroller ; microcontroller.reset()
