Refactor button matrix initialization and update modes configuration for improved functionality

--- a/modes.toml
+++ b/modes.toml
@@ -2,121 +2,121 @@
 mode = 38
 
 [0]
-1 = ["gamepad", "1", "TOGGLE"]
-2 = ["gamepad", "2", "TOGGLE"]
-3 = ["gamepad", "3", "TOGGLE"]
-4 = ["gamepad", "4", "TOGGLE"]
-5 = ["gamepad", "5", "TOGGLE"]
-6 = ["gamepad", "6", "TOGGLE"]
-7 = ["gamepad", "7", "TOGGLE"]
-8 = ["gamepad", "8", "TOGGLE"]
-9 = ["gamepad", "9", "TOGGLE"]
-10 = ["gamepad", "10", "TOGGLE"]
-11 = ["gamepad", "11", "TOGGLE"]
-12 = ["gamepad", "12", "TOGGLE"]
-13 = ["gamepad", "13", "TOGGLE"]
-14 = ["gamepad", "14", "TOGGLE"]
-15 = ["gamepad", "15", "TOGGLE"]
-16 = ["gamepad", "16", "TOGGLE"]
-17 = ["gamepad", "17", "TOGGLE"]
-18 = ["gamepad", "18", "TOGGLE"]
-19 = ["gamepad", "19", "TOGGLE"]
-20 = ["gamepad", "20", "TOGGLE"]
-21 = ["gamepad", "21", "TOGGLE"]
-22 = ["gamepad", "22", "TOGGLE"]
-23 = ["gamepad", "23", "TOGGLE"]
-24 = ["gamepad", "24", "TOGGLE"]
-25 = ["gamepad", "25", "TOGGLE"]
-26 = ["gamepad", "26", "TOGGLE"]
-27 = ["gamepad", "27", "TOGGLE"]
-28 = ["gamepad", "28", "TOGGLE"]
-29 = ["gamepad", "29", "TOGGLE"]
-30 = ["gamepad", "30", "TOGGLE"]
-31 = ["gamepad", "31", "TOGGLE"]
-32 = ["gamepad", "32", "TOGGLE"]
-33 = ["gamepad", "33", "TOGGLE"]
-34 = ["gamepad", "34", "TOGGLE"]
-35 = ["gamepad", "35", "TOGGLE"]
-36 = ["gamepad", "36", "TOGGLE"]
-37 = ["gamepad", "37", "TOGGLE"]
-38 = ["gamepad", "38", "TOGGLE"]
+1 = ["TOGGLE", "KEY", "CONTROL", "A"]
+2 = ["PUSH", "STRING", "macro string"]
+3 = ["PUSH", "NONE"]
+4 = ["PUSH", "NONE"]
+5 = ["PUSH", "NONE"]
+6 = ["PUSH", "NONE"]
+7 = ["PUSH", "NONE"]
+8 = ["PUSH", "NONE"]
+9 = ["PUSH", "NONE"]
+10 = ["PUSH", "NONE"]
+11 = ["PUSH", "NONE"]
+12 = ["PUSH", "NONE"]
+13 = ["PUSH", "NONE"]
+14 = ["PUSH", "NONE"]
+15 = ["PUSH", "NONE"]
+16 = ["PUSH", "NONE"]
+17 = ["PUSH", "NONE"]
+18 = ["PUSH", "NONE"]
+19 = ["PUSH", "NONE"]
+20 = ["PUSH", "NONE"]
+21 = ["PUSH", "NONE"]
+22 = ["PUSH", "NONE"]
+23 = ["PUSH", "NONE"]
+24 = ["PUSH", "NONE"]
+25 = ["PUSH", "NONE"]
+26 = ["PUSH", "NONE"]
+27 = ["PUSH", "NONE"]
+28 = ["PUSH", "NONE"]
+29 = ["PUSH", "NONE"]
+30 = ["PUSH", "NONE"]
+31 = ["PUSH", "NONE"]
+32 = ["PUSH", "NONE"]
+33 = ["PUSH", "NONE"]
+34 = ["PUSH", "NONE"]
+35 = ["PUSH", "NONE"]
+36 = ["PUSH", "NONE"]
+37 = ["PUSH", "NONE"]
+38 = ["PUSH", "NONE"]
 
 [1]
-1 = ["key", "CONTROL", "C"]
-2 = ["string", "macro string"]
-3 = ["NONE"]
-4 = ["NONE"]
-5 = ["NONE"]
-6 = ["NONE"]
-7 = ["NONE"]
-8 = ["NONE"]
-9 = ["NONE"]
-10 = ["NONE"]
-11 = ["NONE"]
-12 = ["NONE"]
-13 = ["NONE"]
-14 = ["NONE"]
-15 = ["NONE"]
-16 = ["NONE"]
-17 = ["NONE"]
-18 = ["NONE"]
-19 = ["NONE"]
-20 = ["NONE"]
-21 = ["NONE"]
-22 = ["NONE"]
-23 = ["NONE"]
-24 = ["NONE"]
-25 = ["NONE"]
-26 = ["NONE"]
-27 = ["NONE"]
-28 = ["NONE"]
-29 = ["NONE"]
-30 = ["NONE"]
-31 = ["NONE"]
-32 = ["NONE"]
-33 = ["NONE"]
-34 = ["NONE"]
-35 = ["NONE"]
-36 = ["NONE"]
-37 = ["NONE"]
-38 = ["NONE"]
+1 = ["PUSH", "GAMEPAD", "1"]
+2 = ["PUSH", "GAMEPAD", "2"]
+3 = ["PUSH", "GAMEPAD", "3"]
+4 = ["PUSH", "GAMEPAD", "4"]
+5 = ["PUSH", "GAMEPAD", "5"]
+6 = ["PUSH", "GAMEPAD", "6"]
+7 = ["PUSH", "GAMEPAD", "7"]
+8 = ["PUSH", "GAMEPAD", "8"]
+9 = ["PUSH", "GAMEPAD", "9"]
+10 = ["PUSH", "GAMEPAD", "10"]
+11 = ["PUSH", "GAMEPAD", "11"]
+12 = ["PUSH", "GAMEPAD", "12"]
+13 = ["PUSH", "GAMEPAD", "13"]
+14 = ["PUSH", "GAMEPAD", "14"]
+15 = ["PUSH", "GAMEPAD", "15"]
+16 = ["PUSH", "GAMEPAD", "16"]
+17 = ["PUSH", "GAMEPAD", "17"]
+18 = ["PUSH", "GAMEPAD", "18"]
+19 = ["PUSH", "GAMEPAD", "19"]
+20 = ["PUSH", "GAMEPAD", "20"]
+21 = ["PUSH", "GAMEPAD", "21"]
+22 = ["PUSH", "GAMEPAD", "22"]
+23 = ["PUSH", "GAMEPAD", "23"]
+24 = ["PUSH", "GAMEPAD", "24"]
+25 = ["PUSH", "GAMEPAD", "25"]
+26 = ["PUSH", "GAMEPAD", "26"]
+27 = ["PUSH", "GAMEPAD", "27"]
+28 = ["PUSH", "GAMEPAD", "28"]
+29 = ["PUSH", "GAMEPAD", "29"]
+30 = ["PUSH", "GAMEPAD", "30"]
+31 = ["PUSH", "GAMEPAD", "31"]
+32 = ["PUSH", "GAMEPAD", "32"]
+33 = ["PUSH", "GAMEPAD", "33"]
+34 = ["PUSH", "GAMEPAD", "34"]
+35 = ["PUSH", "GAMEPAD", "35"]
+36 = ["PUSH", "GAMEPAD", "36"]
+37 = ["PUSH", "GAMEPAD", "37"]
+38 = ["PUSH", "GAMEPAD", "38"]
 
 [2]
-1 = ["NONE"]
-2 = ["NONE"]
-3 = ["NONE"]
-4 = ["NONE"]
-5 = ["NONE"]
-6 = ["NONE"]
-7 = ["NONE"]
-8 = ["NONE"]
-9 = ["NONE"]
-10 = ["NONE"]
-11 = ["NONE"]
-12 = ["NONE"]
-13 = ["NONE"]
-14 = ["NONE"]
-15 = ["NONE"]
-16 = ["NONE"]
-17 = ["NONE"]
-18 = ["NONE"]
-19 = ["NONE"]
-20 = ["NONE"]
-21 = ["NONE"]
-22 = ["NONE"]
-23 = ["NONE"]
-24 = ["NONE"]
-25 = ["NONE"]
-26 = ["NONE"]
-27 = ["NONE"]
-28 = ["NONE"]
-29 = ["NONE"]
-30 = ["NONE"]
-31 = ["NONE"]
-32 = ["NONE"]
-33 = ["NONE"]
-34 = ["NONE"]
-35 = ["NONE"]
-36 = ["NONE"]
-37 = ["NONE"]
-38 = ["NONE"]
+1 = ["PUSH", "NONE"]
+2 = ["PUSH", "NONE"]
+3 = ["PUSH", "NONE"]
+4 = ["PUSH", "NONE"]
+5 = ["PUSH", "NONE"]
+6 = ["PUSH", "NONE"]
+7 = ["PUSH", "NONE"]
+8 = ["PUSH", "NONE"]
+9 = ["PUSH", "NONE"]
+10 = ["PUSH", "NONE"]
+11 = ["PUSH", "NONE"]
+12 = ["PUSH", "NONE"]
+13 = ["PUSH", "NONE"]
+14 = ["PUSH", "NONE"]
+15 = ["PUSH", "NONE"]
+16 = ["PUSH", "NONE"]
+17 = ["PUSH", "NONE"]
+18 = ["PUSH", "NONE"]
+19 = ["PUSH", "NONE"]
+20 = ["PUSH", "NONE"]
+21 = ["PUSH", "NONE"]
+22 = ["PUSH", "NONE"]
+23 = ["PUSH", "NONE"]
+24 = ["PUSH", "NONE"]
+25 = ["PUSH", "NONE"]
+26 = ["PUSH", "NONE"]
+27 = ["PUSH", "NONE"]
+28 = ["PUSH", "NONE"]
+29 = ["PUSH", "NONE"]
+30 = ["PUSH", "NONE"]
+31 = ["PUSH", "NONE"]
+32 = ["PUSH", "NONE"]
+33 = ["PUSH", "NONE"]
+34 = ["PUSH", "NONE"]
+35 = ["PUSH", "NONE"]
+36 = ["PUSH", "NONE"]
+37 = ["PUSH", "NONE"]
+38 = ["PUSH", "NONE"]
