--- a/modes.toml
+++ b/modes.toml
@@ -42,12 +42,12 @@ mode = 38
 38 = ["PUSH", "NONE"]
 
 [1]
-1 = ["PUSH", "GAMEPAD", "1"]
+1 = ["TOGGLE", "GAMEPAD", "1"]
 2 = ["PUSH", "GAMEPAD", "2"]
 3 = ["PUSH", "GAMEPAD", "3"]
 4 = ["PUSH", "GAMEPAD", "4"]
 5 = ["PUSH", "GAMEPAD", "5"]
-6 = ["PUSH", "GAMEPAD", "6"]
+6 = ["TOGGLE", "GAMEPAD", "6"]
 7 = ["PUSH", "GAMEPAD", "7"]
 8 = ["PUSH", "GAMEPAD", "8"]
 9 = ["PUSH", "GAMEPAD", "9"]
@@ -66,17 +66,17 @@ mode = 38
 22 = ["PUSH", "GAMEPAD", "22"]
 23 = ["PUSH", "GAMEPAD", "23"]
 24 = ["PUSH", "GAMEPAD", "24"]
-25 = ["PUSH", "GAMEPAD", "25"]
-26 = ["PUSH", "GAMEPAD", "26"]
-27 = ["PUSH", "GAMEPAD", "27"]
-28 = ["PUSH", "GAMEPAD", "28"]
-29 = ["PUSH", "GAMEPAD", "29"]
-30 = ["PUSH", "GAMEPAD", "30"]
-31 = ["PUSH", "GAMEPAD", "31"]
-32 = ["PUSH", "GAMEPAD", "32"]
-33 = ["PUSH", "GAMEPAD", "33"]
-34 = ["PUSH", "GAMEPAD", "34"]
-35 = ["PUSH", "GAMEPAD", "35"]
+25 = ["TOGGLE", "GAMEPAD", "25"]
+26 = ["TOGGLE", "GAMEPAD", "26"]
+27 = ["TOGGLE", "GAMEPAD", "27"]
+28 = ["TOGGLE", "GAMEPAD", "28"]
+29 = ["TOGGLE", "GAMEPAD", "29"]
+30 = ["TOGGLE", "GAMEPAD", "30"]
+31 = ["TOGGLE", "GAMEPAD", "31"]
+32 = ["TOGGLE", "GAMEPAD", "32"]
+33 = ["TOGGLE", "GAMEPAD", "33"]
+34 = ["TOGGLE", "GAMEPAD", "34"]
+35 = ["TOGGLE", "GAMEPAD", "35"]
 36 = ["PUSH", "GAMEPAD", "36"]
 37 = ["PUSH", "GAMEPAD", "37"]
 38 = ["PUSH", "GAMEPAD", "38"]
