Enhance gamepad functionality and reset capability; update modes configuration

--- a/modes.toml
+++ b/modes.toml
@@ -2,12 +2,12 @@
 mode = 38
 
 [0]
-1 = ["TOGGLE", "KEY", "CONTROL", "A"]
-2 = ["PUSH", "STRING", "macro string"]
+1 = ["TOGGLE", "KEY", "CONTROL", "SHIFT", "F10"]
+2 = ["PUSH", "NONE"]
 3 = ["PUSH", "NONE"]
 4 = ["PUSH", "NONE"]
 5 = ["PUSH", "NONE"]
-6 = ["PUSH", "NONE"]
+6 = ["TOGGLE", "KEY", "CONTROL", "SHIFT", "F12"]
 7 = ["PUSH", "NONE"]
 8 = ["PUSH", "NONE"]
 9 = ["PUSH", "NONE"]
@@ -22,21 +22,21 @@ mode = 38
 18 = ["PUSH", "NONE"]
 19 = ["PUSH", "NONE"]
 20 = ["PUSH", "NONE"]
-21 = ["PUSH", "NONE"]
-22 = ["PUSH", "NONE"]
-23 = ["PUSH", "NONE"]
-24 = ["PUSH", "NONE"]
-25 = ["PUSH", "NONE"]
-26 = ["PUSH", "NONE"]
-27 = ["PUSH", "NONE"]
-28 = ["PUSH", "NONE"]
-29 = ["PUSH", "NONE"]
-30 = ["PUSH", "NONE"]
-31 = ["PUSH", "NONE"]
-32 = ["PUSH", "NONE"]
-33 = ["PUSH", "NONE"]
-34 = ["PUSH", "NONE"]
-35 = ["PUSH", "NONE"]
+21 = ["PUSH", "GAMEPAD", "48"]
+22 = ["PUSH", "GAMEPAD", "49"]
+23 = ["PUSH", "GAMEPAD", "50"]
+24 = ["PUSH", "GAMEPAD", "51"]
+25 = ["PUSH", "GAMEPAD", "52"]
+26 = ["TOGGLE", "GAMEPAD", "53"]
+27 = ["TOGGLE", "GAMEPAD", "54"]
+28 = ["TOGGLE", "GAMEPAD", "55"]
+29 = ["TOGGLE", "GAMEPAD", "56"]
+30 = ["TOGGLE", "GAMEPAD", "57"]
+31 = ["TOGGLE", "GAMEPAD", "58"]
+32 = ["TOGGLE", "GAMEPAD", "59"]
+33 = ["TOGGLE", "GAMEPAD", "60"]
+34 = ["TOGGLE", "GAMEPAD", "61"]
+35 = ["TOGGLE", "GAMEPAD", "62"]
 36 = ["PUSH", "NONE"]
 37 = ["PUSH", "NONE"]
 38 = ["PUSH", "NONE"]
@@ -79,7 +79,7 @@ mode = 38
 35 = ["TOGGLE", "GAMEPAD", "35"]
 36 = ["PUSH", "GAMEPAD", "36"]
 37 = ["PUSH", "GAMEPAD", "37"]
-38 = ["PUSH", "GAMEPAD", "38"]
+38 = ["PUSH", "NODE"]
 
 [2]
 1 = ["PUSH", "NONE"]
